# image-to-csv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md  issue_template.md  pull_request_template.md
.github/workflows/: ci.yml
src/image_to_csv/: cli.py  ocr.py  preprocess.py  table_to_csv.py
tests/: test_cli.py  test_core.py  test_ocr_cache.py  test_ocr_lines.py  test_preprocess.py  test_smoke.py  test_table_to_csv.py
