[tool.poetry]
name = "image-to-csv"
version = "0.1.0"
description = "CLI to convert table images into CSV using OCR."
authors = ["Blair Gemmer"]
license = "MIT"
readme = "README.md"
packages = [{ include = "image_to_csv", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
opencv-python = ">=4.12,<5.0"
pandas = "^2.2.2"
numpy =">=2,<2.3.0"
lxml = "^6.0.2"
typer = "^0.20.0"
click = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
image-to-csv = "image_to_csv.cli:app"

[tool.poetry.group.paddle.dependencies]
# current stable (CPU) combo
paddleocr = "*"
paddlepaddle = "*"
setuptools = "^75.0"

[tool.poetry.group.tesseract.dependencies]
pytesseract = "^0.3.10"
pillow = "^10.4"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
