[tool.poetry]
name = "image-to-csv"
version = "0.1.0"
description = "CLI to convert table images into CSV using OCR."
authors = ["Blair Gemmer"]
license = "MIT"
readme = "README.md"
packages = [{ include = "image_to_csv", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4"
opencv-python = ">=4.12,<5.0"
pandas = "^2.2.2"
numpy =">=2,<2.3.0"
lxml = "^6.0.2"
typer = "^0.20.0"
click = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.10"
ruff = "^0.6.9"
mypy = "^1.11"
tox = "^4.20"

[tool.poetry.scripts]
image-to-csv = "image_to_csv.cli:app"

[tool.poetry.group.paddle]
optional = true

[tool.poetry.group.paddle.dependencies]
# current stable (CPU) combo
paddleocr = "*"
paddlepaddle = "==3.2.0"
setuptools = "^75.0"
bce-python-sdk = ">=0.9"
paddlex = { version = ">=3.3.4,<3.4.0", extras = ["ocr"] }

[tool.poetry.group.tesseract]
optional = true

[tool.poetry.group.tesseract.dependencies]
pytesseract = "^0.3.10"
pillow = "^10.4"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "cv2",
    "cv2.*",
    "numpy",
    "numpy.*",
    "pytesseract",
    "PIL",
    "PIL.*",
    "pandas",
    "pandas.*",
    "typer",
    "typer.*",
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
